# Installer-patch

./: Cargo.toml  README.md  build.rs
crates/Installer/ui/: app-window.slint
crates/Installer/ui/pages/: base-page.slint  install-actions.slint  pages.slint
crates/cli/: Cargo.toml
crates/cli/src/: lib.rs  main.rs
crates/cli/src/cli/: arguments.rs  commands.rs  mod.rs  select_location.rs  selections.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: lib.rs
crates/core/src/patch/: patch_mod.rs  patch_openasar.rs
crates/core/src/update/: download.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  main.rs
crates/gui/ui/: app-window.slint  globals.slint  gruvbox-palette.slint  index.slint  settings-dialog.slint
crates/gui/ui/pages/: base.slint  install-page.slint  pages.slint
crates/shared/: Cargo.toml
crates/shared/src/: lib.rs
crates/vencord-installer/: Cargo.toml
crates/vencord-installer-cli/: Cargo.toml
crates/vencord-installer-cli/src/: main.rs
crates/vencord-installer-cli/src/commands/: mod.rs  patch.rs
crates/vencord-installer-core/: Cargo.toml  README.md
crates/vencord-installer-core/src/: lib.rs
crates/vencord-installer-core/src/patch/: mod.rs  patch_mod.rs  patch_openasar.rs
crates/vencord-installer-core/src/paths/: branch.rs  mod.rs  shared.rs
crates/vencord-installer-core/src/paths/linux/: locations.rs
crates/vencord-installer-core/src/paths/mac/: locations.rs
crates/vencord-installer-core/src/paths/windows/: locations.rs
crates/vencord-installer-core/src/update/: download.rs  version_check.rs
crates/vencord-installer-gui/: Cargo.toml  build.rs
crates/vencord-installer-gui/src/: app.rs  operations.rs
crates/vencord-installer-gui/ui/: app-window.slint  globals.slint  gruvbox-palette.slint
crates/vencord-installer-gui/ui/pages/: base.slint  install-page.slint  pages.slint  settings-page.slint
src/: main.rs
ui/: app-window.slint  globals.slint
ui/pages/: base-page.slint  footer.slint  install-actions.slint  install-select.slint  pages.slint
