[package]
name = "vencord-installer-cli"
version = "2.0.0"
edition = "2024"

[dependencies]
vencord-installer-core = { path = "../core", features = ["openasar", "version_check", "generate_asar"] }
clap = { version = "4.0", features = ["derive", "color"] }
tokio = { version = "1.42.0", features = ["full"] }
dialoguer = "0.12.0"
console = "0.16.1"
