[package]
name = "vencord-installer-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
vencord-installer-core = { path = "../core" }
vencord-installer-shared = { path = "../shared" }
clap = { version = "4.0", features = ["derive"] }
dialoguer = "0.12.0"
console = "0.16.1"
