[package]
name = "vencord-installer-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
slint = "1.12.1"
vencord-installer-core = { path = "../core" }
vencord-installer-shared = { path = "../shared" }
tokio.workspace = true

[build-dependencies]
slint-build = "1.12.1"
