[package]
name = "vencord-installer-gui"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio.workspace = true
env_logger.workspace = true
vencord-installer-core = { path = "../core" }
slint = "1.12.1"

[build-dependencies]
slint-build = "1.12.1"
